Xfce 4.7.0
----------

  * Allow DnD to image list in settings dialog (bug 4337).
  * Refactor drawing routines in XfdesktopIconView to remove most
    flicker and most if not all repaint glitches.
  * Use cairo to draw the rounded text label background instead of
    the hacky PNG composition method.
  * Make the text label corner roundness configurable via a gtkrc
    style property.


Xfce 4.6.2
----------

  * Add Catalan and Galician translations of the manual.
  * Fix inability to delete broken symlinks on the desktop (bug 5387).
  * Never show 'Unmount' in volume context menus.
  * Always show 'Eject' in volume context menus, regardless of whether
    or not it's mounted (bug 5343).
  * Update icon text labels when system font size changes (bug 2862).


Xfce 4.6.1
----------

  * Fix desktop menu failing to load on FreeBSD (bug 3370).
  * Ensure root window properties get deleted when xfdesktop
    quits (bug 5154).
  * Reload the backdrop and icon view when 'xfdesktop --reload'
    is run (bug 5156).
  * Make default button in 'delete multiple' dialog consistent with
    default in 'delete single' dialog (bug 5140).
  * Reload the desktop when the first image is added to an image
    list (bug 5001).
  * Auto-select new images as they are added to the settings dialog's
    image list (bug 5014).


Xfce 4.6.0
----------

  * Fix menu plugin crash when selecting custom menu file (bug 4879).
  * Only regen the monitor on changes to files we care about (bug 4979).


Xfce 4.6rc1 (Xfce 4.5.99.1):
----------------------------

  * Remove the menu editor (which was just a stub anyway).


Xfce 4.6beta3 (Xfce 4.5.93):
----------------------------

  * Avoid an infinite loop if all files in a backdrop list are invalid.


Xfce 4.6beta2 (Xfce 4.5.92):
----------------------------

  * Display 'Audio' and 'Video' categories in the multimedia submenu.
  * Fix multiple image selection in settings dialog file chooser (bug 4522).